to remove split

--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -28,10 +28,10 @@ body
        
 
     style.
-        /* video detach button */
+        /* video detach button 
         //  video popout
-        // https://css-tricks.com/custom-controls-in-html5-video-full-screen/
-        // May remove other useful browser popups, inserted after "body" element.
+         https://css-tricks.com/custom-controls-in-html5-video-full-screen/
+        */
         ::-webkit-media-controls {
             display:none !important;
         }
@@ -87,6 +87,7 @@ body
 
     script.
         window.split = null
+        // https://codetheory.in/html5-fullscreen-background-video/
         window.addEventListener('resize', resizeVid) 
         function resizeVid() {
             var w = $('.main').width()
@@ -100,8 +101,9 @@ body
 
             if(nw>w) {
                 console.log('too wide')
-                $('.mediaContainerTop').width( nw)
-                $('.mediaContainerTop').height(  nh)
+                // the problem
+                $('.mediaContainerTop').width( w)
+                $('.mediaContainerTop').height( nh)
             }
             if(nh>h) {
                 console.log('too tall')
