--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -80,6 +80,7 @@ body
 
             border:  2px solid blue;
             background: #eee;	           
+            min-height: 25px;
 
             border-top: 1px solid black;
         }
@@ -97,7 +98,7 @@ body
             var nh = 0
             while (nw <= w) {
                 nh = nw * 0.5625
-                if(nh > h) break
+                if( (nh+25+15) > h) break
                 nw = nw + 1
             }
 
