--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -9,14 +9,12 @@ body
         .main
             #left
                 .mediaContainerTop
-                    p oh hi top
-                    //vXideo#vid1.vid( autoplay preload='auto' loop muted )
+                    video#vid1.vid( autoplay preload='auto' loop muted )
                         source(src='arc2.mp4' type="video/mp4" )
                     
                 .mainBot
                     p oh hi bot
 
-    
             #right
                 button Up
                 p
@@ -35,6 +33,13 @@ body
            display:none !important;
         }
 
+        .vid {
+            object-fit: fill;
+            border-radius: 5px;
+            width: 100%;
+            height: 100%;
+        }
+
         * { margin: 0; padding: 0; }
         html, body { 
             width: 100%; 
@@ -48,41 +53,50 @@ body
         }
         .top {
             height: 50px; /** *C* */
-            border-bottom: 1px solid black;
         }
         .main {
             display: flex; /* 2nd fle level */
             flex-grow: 1; 
+            min-height: 100px;
+
         }
 
         #left {
             width: calc(100% - 200px); /** *C* */
     
+            min-width: 150px;
+
             display: flex; /* 3rd flex level */
             flex-direction: column;
 
-            border:  2px solid yellow;
-            background: gray;	
+            Xborder:  .1px solid yellow;
+            Xbackground: gray;	
         }
         #right {
-            border-left: 1px solid black;
+            border-top: 1.4px solid black;
+            width: 200px;
+            border-radius: 5px 0 0 0;
+            padding: 5px;
+            border-left: 1.4px solid black;
         }
 
         .mediaContainerTop { /* fluid */
+            padding-left: 1px;
+
             flex-grow: 0;
-            position: relative;
-            
-            border:  2px solid red;
-            background: silver;	
+
+            Xborder:  .1px solid red;
+            Xbackground: silver;	
         }
         .mainBot {
             flex-grow: 1;
 
-            border:  2px solid blue;
-            background: #eee;	           
-            min-height: 25px;
+            Xborder:  .1px solid blue;
+            background: #fff;	           
+            min-height: 75px;
 
-            border-top: 1px solid black;
+            border-top: 1.4px solid black;
+            margin-top: 5px;
         }
 
 
@@ -91,24 +105,22 @@ body
         window.addEventListener('resize', resizeVid) 
         function resizeVid() {
             var w = $(window).width() - 200 
-            var h = $(window).height() - 50
+            var h = $(window).height() - 75
 
             // math?
             var nw = 16
             var nh = 0
             while (nw <= w) {
                 nh = nw * 0.5625
-                if( (nh+25+15) > h) break
+                if( (nh+75+5) > h) break
                 nw = nw + 1
             }
 
-            console.log('c:', w, h, nw, nh)       
+            //console.log('c:', w, h, nw, nh)       
             nw = nw-50
 
             $('.mediaContainerTop').width( nw)
             $('.mediaContainerTop').height( nh )
-
-            console.log('<<<')
         }//()
 
 
