--- a/tut/layout/scss/style.scss
+++ b/tut/layout/scss/style.scss
@@ -1,4 +1,9 @@
 
+html { touch-action: manipulation; }
+.delayShowing { opacity: 0; }
+.blur { -webkit-filter:blur(2px);filter:blur(2px); }
+
+
 /* video detach button 
 //  video popout
     https://css-tricks.com/custom-controls-in-html5-video-full-screen/
