--- a/tut/layout/custels/fraglist/index2.pug
+++ b/tut/layout/custels/fraglist/index2.pug
@@ -6,13 +6,13 @@ body
 
     .fragCont
         p
-        button#prev.btn.butOff.classless(disabled) Previous 
+        button#prevBut.btn.butOff.classless(disabled) Previous 
         .topSpace
         .pagCont
             #data-container
             #pagination-container
         
-        button#next.btn.butOff.classless(disabled) Next 
+        button#nextBut.btn.butOff.classless(disabled) Next 
 
         template#temp1
             span {{#.}}
@@ -23,22 +23,32 @@ body
     
 style.
 
-    .topSpace {
-        height: 1.6em;
-    }
-
     .fragCont {
+        width: 200px;
         margin-left: 1em;
         display: flex;
         flex-direction: column;
         height: calc(100% - 1.5em);
-    }    
+    }
+    .topSpace {
+        min-height: 1.6em;
+    }
+    
     .pagCont {
         flex-grow: 1;
+    }
+    #nextBut {
+
     }
 
     .fragTitle {
         font-weight: 400;
+        
+        /*clamp */
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
     }
 
     .butOn {
@@ -61,7 +71,7 @@ script.
         const selector = '.fragTitle'
         var cel = el.target.closest(selector)
         if (!cel) return
-        console.log(cel)
+        //console.log(cel)
 
         var title = cel.innerText
         console.log(title)
@@ -72,32 +82,40 @@ script.
 
     depp.require(['jquery', 'pagination', 'mustache', 'js-yaml', 'poly'], function() {
         console.log('ready')
-        // data
-        fetchFrags('').then(function(dat){
-            console.log(dat)
-            onFragData(dat.frags)
-        })
+     
+        render()
 
         depp.require('DOMDelayed', function() {
+
             var table = document.getElementById('data-container')
             table.addEventListener('click', onRowClick)
     
-            document.getElementById("prev").addEventListener("click", function(){
+            document.getElementById("prevBut").addEventListener("click", function(){
                     console.log('P')
                     $('#pagination-container').pagination('previous')
                 })
 
-            document.getElementById("next").addEventListener("click", function(){
+            document.getElementById("nextBut").addEventListener("click", function(){
                 console.log('N')
                 $('#pagination-container').pagination('next')
-        })
-        })
+            })//event
+
+            window.addEventListener('resize', render)
+
+        })//dep
         
     })// req
 
-    function fetchFrags() {  //polyIO
+    function render() {
+        _fetchD('').then(function(dat){
+            _onFData(dat.frags)
+        })
+    }//()
+
+    function _fetchD() {  //polyIO
         var path = ''
 
+        // data
         return new Promise(function (resolve, reject) {
             fetch(path+'dat.yaml', {
                 cache: 'default',
@@ -117,12 +135,13 @@ script.
         })//pro
     }
 
-    function onFragData(data) {        
+    function _onFData(data) {        
 
         console.log('data')
-        var computedItems = $('.pagCont').height() / 40   // pixels    
+        // MATH:
+        var computedItems = $('.pagCont').height() / 65   // pixels  of each row
 
-        console.log('ci', $('.pagCont').height(), computedItems ) 
+        console.log('rendering', $('.pagCont').height(), computedItems ) 
 
         $('#pagination-container').pagination({
             pageSize: computedItems,
@@ -133,33 +152,35 @@ script.
             dataSource: data,
 
             callback: function(data, pagination) { // on page
-                console.log('pg')
+                console.log('pagination')
                 setTimeout(function(){ //pg, sz, tot
                     showHide(pagination.pageNumber, pagination.pageSize, pagination.totalNumber)
                 },1)
 
                 var html = renderMustache('temp1', data)
                 $('#data-container').html(html)
+
             }//cb
         })
 
     }//()
 
     function showHide(pg, sz, tot) {
-        if(pg==1)  { but('prev', false ) }
-            else but('prev', true) 
+        if(pg==1)  { _but('prevBut', false ) }
+            else _but('prevBut', true) 
 
         var cur = pg * sz
-        console.log('sh', cur, tot)
+        //console.log('showHide', cur, tot)
+
         if(cur < tot) { // more 
-            but('next', true) 
+            _but('nextBut', true) 
         } else { // to much
-            but('next', false) 
+            _but('nextBut', false) 
         }
     }
 
-    function but(id, on) {
-        console.log(id,on)
+    function _but(id, on) {
+        //console.log(id, on)
         $b = $('#'+id)
         $b.prop('disabled', !on)
         if(on) {
