--- a/tut/layout/custels/fraglist/index.pug
+++ b/tut/layout/custels/fraglist/index.pug
@@ -1,63 +1,29 @@
 head
     include /layout/headFrag
+
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
 body
-
-    .fragCont
-        p
-        button#prevBut.btn.butOff.classless(disabled) Previous 
-        .topSpace
-        .pagCont
-            #data-container
-            #pagination-container
-        
-        button#nextBut.btn.butOff.classless(disabled) Next 
-
-        template#temp1
-            span {{#.}}
-                .fragTitle {{title}}
-                hr
-                br
-            span {{/.}}
+    p oh hi
     
-style.
+    fraglist-custel
 
-    .fragCont {
-        width: 200px;
-        margin-left: 1em;
-        display: flex;
-        flex-direction: column;
-        height: calc(100% - 1.5em);
-    }
-    .topSpace {
-        min-height: 1.6em;
-    }
-    
-    .pagCont {
-        flex-grow: 1;
-    }
-    #nextBut {
+script.
+    console.log('oh hi')
 
-    }
+    depp.define({
+     'fraglist':'/layout/custels/fraglist/fraglist-custel.js'
+    })
 
-    .fragTitle {
-        font-weight: 400;
-        
-        /*clamp */
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;  
-        overflow: hidden;
-    }
+    depp.require([ 'fraglist' ], function() {
+        console.log('loaded')
+    }) 
 
-    .butOn {
-        font-weight: normal;
-        pointer-events: auto;
-    }
-    .butOff {
-        font-weight: lighter;
-        pointer-events: none;
-   }
+    addEventListener('titleClick', function (evt) {
+        const msg = evt.detail
+        console.log(msg)
+       
 
+    })//()
 
+     
