--- a/tut/layout/custels/fraglist/index.html
+++ b/tut/layout/custels/fraglist/index.html
@@ -9,13 +9,13 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <script src="https://cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.9.21/src/toolBelt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.9.21/src/toolBelt.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css"/>
 </head>
 <body>
   <p>oh hi</p>
   <fraglist-custel></fraglist-custel>
-<!-- mB v6.09.19 on 2019-09-28T22:04:47.017Z --></body>
+<!-- mB v6.09.19 on 2019-09-28T22:13:52.552Z --></body>
 <script>
   console.log('oh hi')
   
