--- a/tut/layout/itemLay.pug
+++ b/tut/layout/itemLay.pug
@@ -27,7 +27,7 @@ body
     
     script.
         depp.require([ 'fraglist' ], function() {
-            console.log('loaded')
+            //console.log('loaded')
         }) 
 
         addEventListener('titleClick', function (evt) {
