--- a/tut/layout/css/style.css
+++ b/tut/layout/css/style.css
@@ -1,3 +1,6 @@
+html{touch-action:manipulation;}
+.delayShowing{opacity:0;}
+.blur{-webkit-filter:blur(2px);filter:blur(2px);}
 ::-webkit-media-controls{display:none !important;}
 video::-webkit-media-controls-enclosure{display:none !important;}
 .vid{-o-object-fit:fill;object-fit:fill;border-radius:5px;width:100%;height:100%;}
@@ -6,7 +9,7 @@ html,body{width:100%;height:100%;}
 .pgCont{display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;height:100vh;max-height:100vh;}
 .top{height:50px;}
 .main{display:-webkit-box;display:flex;-webkit-box-flex:1;flex-grow:1;min-height:100px;}
-#left{width:calc(100% - 200px);min-width:150px;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;Xborder:.1px solid yellow;Xbackground:gray;}
-#right{border-top:1.4px solid black;width:200px;border-radius:5px 0 0 0;padding:5px;border-left:1.4px solid black;}
+#left{width:calc(100% - 220px);min-width:150px;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;Xborder:.1px solid yellow;Xbackground:gray;}
+#right{border-top:1.4px solid black;width:220px;border-radius:5px 0 0 0;padding:5px;border-left:1.4px solid black;}
 .mediaContainerTop{padding-left:1px;-webkit-box-flex:0;flex-grow:0;Xborder:.1px solid red;Xbackground:silver;}
-.mainBot{-webkit-box-flex:1;flex-grow:1;background:#fff;min-height:75px;border-top:1.4px solid black;margin-top:5px;} /* mB v6.09.19 on 2019-09-28T16:29:48.326Z */
+.mainBot{-webkit-box-flex:1;flex-grow:1;background:#fff;min-height:75px;border-top:1.4px solid black;margin-top:5px;} /* mB v6.09.19 on 2019-09-28T22:51:14.097Z */
