--- a/5625/layout/itemLay.pug
+++ b/5625/layout/itemLay.pug
@@ -10,7 +10,7 @@ body
 
     .pgCont
         .top
-            p #{desc}
+            h3#heading #{title}
         .main
             #left
                 .mediaContainerTop
@@ -18,7 +18,7 @@ body
                         source( type="video/mp4" )
                     
                 .mainBot
-                    p oh hi bot
+                    p .
 
             #right
                 fraglist-custel
