--- a/5625/layout/scss/style.scss
+++ b/5625/layout/scss/style.scss
@@ -14,6 +14,16 @@ html { touch-action: manipulation; }
 video::-webkit-media-controls-enclosure {
     display:none !important;
 }
+* { margin: 0; padding: 0; }
+html, body { 
+    width: 100%; 
+    height: 100%; 
+}
+
+#heading {
+    padding-top: 1em;
+    padding-left: 1em;
+}
 
 .vid {
     object-fit: fill;
@@ -22,11 +32,7 @@ video::-webkit-media-controls-enclosure {
     height: 100%;
 }
 
-* { margin: 0; padding: 0; }
-html, body { 
-    width: 100%; 
-    height: 100%; 
-}
+
 .pgCont {
     display: flex;
     flex-direction: column;
