--- a/5625/layout/css/style.css
+++ b/5625/layout/css/style.css
@@ -7,10 +7,10 @@ video::-webkit-media-controls-enclosure{display:none !important;}
 html,body{width:100%;height:100%;}
 #heading{padding-top:1em;padding-left:1em;}
 .vid{-o-object-fit:fill;object-fit:fill;border-radius:5px;width:100%;height:100%;}
-.pgCont{display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;height:100vh;max-height:100vh;}
+.pgCont{display:flex;flex-direction:column;height:100vh;max-height:100vh;}
 .top{height:50px;}
-.main{display:-webkit-box;display:flex;-webkit-box-flex:1;flex-grow:1;min-height:100px;}
-#left{width:calc(100% - 220px);min-width:150px;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;Xborder:.1px solid yellow;Xbackground:gray;}
+.main{display:flex;flex-grow:1;min-height:100px;}
+#left{width:calc(100% - 220px);min-width:150px;display:flex;flex-direction:column;Xborder:.1px solid yellow;Xbackground:gray;}
 #right{border-top:1.4px solid black;width:220px;border-radius:5px 0 0 0;padding:5px;border-left:1.4px solid black;}
-.mediaContainerTop{padding-left:1px;-webkit-box-flex:0;flex-grow:0;Xborder:.1px solid red;Xbackground:silver;}
-.mainBot{-webkit-box-flex:1;flex-grow:1;background:#fff;min-height:75px;border-top:1.4px solid black;margin-top:5px;} /* mB v6.09.25 on 2019-09-30T13:53:37.501Z */
+.mediaContainerTop{padding-left:1px;flex-grow:0;Xborder:.1px solid red;Xbackground:silver;}
+.mainBot{flex-grow:1;background:#fff;min-height:75px;border-top:1.4px solid black;margin-top:5px;} /* mB v6.09.30 on 2019-10-01T23:53:09.562Z */
