--- a/5625/landing/home/index.pug
+++ b/5625/landing/home/index.pug
@@ -3,5 +3,39 @@ head
 
 body
     p Title
-    include items
+    #data-container
+    #pagination-container
+        include items
     
+
+
+    script.
+
+        depp.require(['jquery', 'pagination', 'mustache'],function(){
+            paginate()
+        })//()
+
+        function paginate(feed_) {
+            console.log('oh hi')
+
+            var dataSource_ = [1, 2, 3, 4, 5, 6, 7]
+
+            var perPage = _guessShow()
+
+            
+            $('#pagination-container').pagination({
+                dataSource: dataSource_,
+                callback: function(data, pagination) {
+                    // tag.render(data)
+                }//cb
+            })
+
+        }
+
+
+        function _guessShow() {
+            let n = ( $(window).width() * $(window).height()  ) / ( 300 * 400) * .9
+            n = Math.round( n * .7)
+            console.log('g', n)
+            return n
+        }//()
