--- a/5625/landing/scss/pagination.scss
+++ b/5625/landing/scss/pagination.scss
@@ -73,7 +73,7 @@ $B_navHeight: $B_activeHeight;
 
 .paginationjs{
   line-height: 1.6;
-  font-family: "Marmelad", "Lucida Grande", "Arial", "Hiragino Sans GB", Georgia, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: $N_fontSize;
   box-sizing: initial;
   &:after{
