--- a/5625/landing/home/index.pug
+++ b/5625/landing/home/index.pug
@@ -1,13 +1,20 @@
 head
     include /layout/headFrag
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
 body
+    link(rel='stylesheet', href='/landing/css/pagination.css')
+
     p Title
     #data-container
+    
     #pagination-container
         include items
     
-
+    style. 
+        #pagination-container {
+            padding: 10px;
+        }
 
     script.
 
