--- a/5625/landing/home/cards.pug
+++ b/5625/landing/home/cards.pug
@@ -1,15 +1,14 @@
 
 #cards
 
-
 template#card
     span {{#.}}
-    .card
+    a.card(href='{{url}}')
         .imgCont
-            img(src='temp.jpg')
+            img(src='{{img}}')
         .txtCont
-            h4 This is the tile
-            p This is the description
+            h4 {{title}}
+            p {{desc}}
     span {{/.}}
 
 style. 
@@ -43,6 +42,11 @@ style.
         border-color: #DCDCDC;
     }
 
+    #cards a {
+        text-decoration: none;
+        color: black;
+    }
+
     .imgCont {
         height:180px;
         overflow: hidden;
@@ -58,10 +62,16 @@ style.
 
 script. 
     function cardRender(data) {
-        console.log('ren', Object.keys(data[0]))
+        //console.log('ren', Object.keys(data[0]))
+        var len = data.length
+        for (var i = 0; i < len; i++) {
+            data[i].img = data[i].prefix + data[i].url+ '/'+data[i].img
+            
+            data[i].url = data[i].prefix + data[i].url
+
+            console.log(data[i].img)
+        }//for
         
         let html = renderMustache(document, 'card', data) 
-
         document.getElementById('cards').innerHTML = html
-
-    }
+    }//()
