--- a/5625/items/custels/fraglist/index.pug
+++ b/5625/items/custels/fraglist/index.pug
@@ -1,5 +1,5 @@
 head
-    include /layout/headFrag
+    include /common/headFrag
 
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
@@ -11,7 +11,7 @@ script.
     console.log('oh hi')
 
     depp.define({
-     'fraglist':'/layout/custels/fraglist/fraglist-custel.js'
+     'fraglist':'/items/custels/fraglist/fraglist-custel.js'
     })
 
     depp.require([ 'fraglist' ], function() {
