--- a/5625/items/itemLay.pug
+++ b/5625/items/itemLay.pug
@@ -1,12 +1,11 @@
 head
-    include headFrag
+    include /common/headFrag
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
 
-
 body
-    link(rel='stylesheet', href='/layout/css/style.css')
-    script(src='/layout/ui-loader.js')
+    link(rel='stylesheet', href='/items/css/style.css')
+    script(src='/items/ui-loader.js')
 
     .pgCont
         .top
