--- a/5625/landing/home/index.pug
+++ b/5625/landing/home/index.pug
@@ -1,5 +1,5 @@
 head
-    include /layout/headFrag
+    include /common/headFrag
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
 body
