--- a/5625Vid/items/itemLay.pug
+++ b/5625Vid/items/itemLay.pug
@@ -1,6 +1,6 @@
 head
     include /common/headFrag
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.4/src/css/main.min.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.4/src/css/main.css')
 
 
 body
