--- a/site/www/ex/api/headFrag.pug
+++ b/site/www/ex/api/headFrag.pug
@@ -6,11 +6,10 @@ title #{title}
 meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
 script(src='//cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.min.js')
-script(src='https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.10.8/src/toolBelt.min.js')
-script(src='https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2.3.0/webcomponents-loader.js')
-
 style.
    .delayShowing { opacity: 0; }
    .blur { -webkit-filter:blur(2px);filter:blur(2px); }
+   .blurText { color: transparent; text-shadow: 0 0 3px black; }
 
-
+script(src='//unpkg.com/mtool-belt@1.3.28/toolBelt.js')
+//- script(src='toolBelt.js')
